--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
   "name": "lifeofmle.github.io",
-  "version": "2.0.0",
-  "description": "Personal portfolio website",
+  "version": "3.0.0",
+  "description": "UX portfolio website",
   "main": "index.html",
   "repository": {
     "type": "git",
     "url": "https://github.com/lifeofmle/lifeofmle.github.io.git"
   },
-  "keywords": [
-    "UX",
-    "portfolio"
-  ],
   "author": "Michael Le",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/lifeofmle/lifeofmle.github.io/issues"
   },
